--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/DrHyde01/StephaneHeyd_7_03082021#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.12",
+    "sequelize": "^6.6.5"
   }
 }
