--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/DrHyde01/StephaneHeyd_7_03082021#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.12",
+    "password-validator": "^5.1.1",
     "sequelize": "^6.6.5"
   }
 }
