--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +16,7 @@
   },
   "homepage": "https://github.com/DrHyde01/StephaneHeyd_7_03082021#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -27,8 +26,9 @@
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "password-validator": "^5.1.1",
     "sequelize": "^6.6.5"
-  }
+  },
+  "description": ""
 }
